!2313 fix(#I4QT7M): set text align to center on select in pagination * style: 微调导航条样式居中对齐 * chore: bump version beta06

--- a/src/BootstrapBlazor/Components/Pagination/Pagination.css
+++ b/src/BootstrapBlazor/Components/Pagination/Pagination.css
@@ -25,11 +25,10 @@
 
         .pagination-items .select .dropdown-menu {
             min-width: unset;
-            text-align: right;
+            text-align: center;
         }
 
-        .pagination-items .select .form-control {
-            width: 100%;
+        .pagination-items .select .form-select {
             text-align: center;
         }
 
